<resources>
    <string name="app_name">Assessment 2</string>
    <string name="Title">All-Round\'s Quiz</string>
    <string name="button_start">Start</string>
    <string name="button_log">Log</string>
    <string name="button_about">About</string>
    <string name="question_label">Question%d</string>
    <string name="question">Where does this country belong to?</string>
    <string name="option">Option</string>
    <string name="list_country">List Country</string>
    <string name="submit_button">Submit</string>
    <string name="answer1">Indonesia</string>
    <string name="answer2">Singapore</string>
    <string name="answer3">Monaco</string>
    <string name="answer4">Poland</string>
    <string name="tv_congrats">Congratulation!</string>
    <string name="tv2">You have completed the Quiz!</string>
    <string name="tv_score">Your score is 4 out of 5</string>
    <string name="button_finish">Finish</string>
    <string name="tentang_aplikasi">About App</string>
    <string name="title_about">About</string>
    <string name="message">%1$s diklik!</string>
    <string name="about">"Aplikasi untuk memenuhi Assessment yang ada, dan masih dalam pengembangan"</string>
    <string name="switch_layout">Ubah Tampilan</string>
    <string name="koneksi_error">Yahh koneksi nya hilang :(</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data hewan otomatis</string>
    <string name="notif_title">Country list is now updated!</string>
    <string name="notif_text">Check now, dont miss it...</string>
</resources>