<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#f0fcfa"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="284dp"
        android:layout_height="126dp"
        android:fontFamily="@font/spicy_rice"
        android:text="@string/Title"
        android:textAlignment="center"
        android:textColor="#B54040"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="162dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/brawler"
        android:text="@string/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/log_button"
        android:layout_width="162dp"
        android:layout_height="51dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/brawler"
        android:text="@string/button_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_button2" />

    <Button
        android:id="@+id/log_button2"
        android:layout_width="162dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/brawler"
        android:text="@string/button_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button" />

</androidx.constraintlayout.widget.ConstraintLayout>