<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B4D5CF"
    tools:context=".ui.main.ResultFragment">

    <TextView
        android:id="@+id/tv_congrats"
        android:layout_width="320dp"
        android:layout_height="102dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/brawler"
        android:gravity="center"
        android:text="@string/tv_congrats"
        android:textIsSelectable="false"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_trophy"
        android:layout_width="189dp"
        android:layout_height="165dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_congrats"
        app:srcCompat="@drawable/iv_trophy" />

    <TextView
        android:id="@+id/tv_complete"
        android:layout_width="296dp"
        android:layout_height="77dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/brawler"
        android:gravity="center"
        android:text="@string/tv2"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_trophy" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="337dp"
        android:layout_height="68dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/brawler"
        android:gravity="center"
        android:text="@string/tv_score"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_complete" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="329dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_score" />
</androidx.constraintlayout.widget.ConstraintLayout>