<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#CFF3ED"
    tools:context=".ui.main.MainFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="284dp"
            android:layout_height="126dp"
            android:fontFamily="@font/spicy_rice"
            android:text="@string/Title"
            android:textAlignment="center"
            android:textColor="#B54040"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.367"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="182dp"
            android:layout_height="58dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/brawler"
            android:text="@string/button_start"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/list_button"
            android:layout_width="182dp"
            android:layout_height="61dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/brawler"
            android:text="@string/list_country"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>